Added Photo and Email Link to Contact page

--- a/contact.html
+++ b/contact.html
@@ -12,5 +12,7 @@
     <a href="/index.html">Back to Homepage</a>
     </br>
     <a href="/photo.html">Photo</a>
+    </br>
+    <a href="mailto:kelly.granger56@gmail.com">kelly.granger56@gmail.com</a>
   </body>
 </html>
