--- a/photo.html
+++ b/photo.html
@@ -12,5 +12,7 @@
     <a href="/index.html">Back to Homepage</a>
     </br>
     <a href="/contact.html">Contact Me</a>
+    </br>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/019/530/original/Whiskey.jpg?1634930456" alt="Whiskey" width=300px>
   </body>
 </html>
