Added classes and CSS

--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <h1>Contact Me</h1>
-    <a href="/index.html">Back to Homepage</a>
+    <a href="/index.html" class="links">Back to Homepage</a>
     </br>
-    <a href="/photo.html">Photo</a>
+    <a href="/photo.html" class="links">Photo</a>
     </br>
-    <a href="mailto:kelly.granger56@gmail.com">kelly.granger56@gmail.com</a>
+    <h3>Connect with me</h3>
+    <a href="mailto:kelly.granger56@gmail.com" class="links email">kelly.granger56@gmail.com</a>
   </body>
 </html>
