--- a/photo.html
+++ b/photo.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <h1>Photo</h1>
-    <a href="/index.html">Back to Homepage</a>
+    <a href="/index.html" class="links">Back to Homepage</a>
     </br>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/contact.html" class="links">Contact Me</a>
     </br>
     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/019/530/original/Whiskey.jpg?1634930456" alt="Whiskey" width=300px>
   </body>
