--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <h1>Croissant</h1>
-    <a href="/contact.html">Contact Me</a>
+    <h2>Welcome!</h2>
+    <a href="/contact.html" class="links">Contact Me</a>
   </br>
-    <a href="/photo.html">Photos</a>
+    <a href="/photo.html" class="links">Photos</a>
   </body>
 </html>
