--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Contact Me" content="contact me via email" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Contact</title>
+    <title>Contact Me: SheCodes: Kelly G</title>
   </head>
   <body>
     <h1>Contact Me</h1>
     <a href="/index.html" class="links">Back to Homepage</a>
     </br>
-    <a href="/photo.html" class="links">Photo</a>
+    <a href="/photo.html" class="links">Photo Page</a>
     </br>
     <h3>Connect with me</h3>
     <a href="mailto:kelly.granger56@gmail.com" class="links email">kelly.granger56@gmail.com</a>
