--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Croissant" content="Page about Croissants to learn about SEO"/>
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Croissant</title>
+    <title>Croissant: SheCodes: Kelly G.</title>
   </head>
   <body>
     <h1>Croissant</h1>
     <h2>Welcome!</h2>
     <a href="/contact.html" class="links">Contact Me</a>
-  </br>
+    </br>
     <a href="/photo.html" class="links">Photos</a>
   </body>
 </html>
