--- a/photo.html
+++ b/photo.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Croissant Photo" content="Photo of Croissant" />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Photo</title>
+    <title>Photo: SheCodes: Kelly G.</title>
   </head>
   <body>
     <h1>Photo</h1>
